# shader_sim

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.html
docs/: building.md  usage.md
examples/: atmosphere.frag.glsl  atmosphere_frag.spv  fixed_color_frag.spv  fixed_color_vert.spv  fixed_color_vert_runner.json  simple_frag.spv  simple_frag_runner.json  simple_vert.spv  simple_vert_runner.json  test_access_chain.spv  test_access_chain_runner.json  vert_arith.spv  vert_arith.src  vert_arith_int.spv  vert_arith_int.src  vert_arith_int_runner.json  vert_arith_runner.json
src/: allocator.c  allocator.h  dyn_array.c  dyn_array.h  hash_map.c  hash_map.h  main.c  runner.c  runner.h  runner_lut.h  spirv_binary.c  spirv_binary.h  spirv_module.c  spirv_module.h  spirv_sim_ext.h  spirv_sim_ext_glsl.c  spirv_simulator.c  spirv_simulator.h  spirv_text.c  spirv_text.h  types.h  utils.c  utils.h
src/cli/: main.c  runner.c  runner.h  runner_lut.c
src/emscripten/: api.c  lut.c  lut.h
src/spirv/: spirv_names.h
src/spirv/generate_names/: generate.py
tests/: test_basic_ops.c  test_dyn_array.c  test_hash_map.c  test_main.c  test_spirv_sim.c
wasm/: shader_sim_api.data  shader_sim_api.js  shader_sim_api.wasm
webui/: deploy.sh  index.html
